# online-stats

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
src/online_stats/: __init__.py  _online_stats.py
tests/: test_online_stats.py
