[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "online-stats"
version = "0.1.0"
description = "Online mean and covariance statistics via the Welford/Chan algorithm"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
